--- a/html/tab_list.html
+++ b/html/tab_list.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <input type="text" class="input" name="tab_query" id="tab_query_field" placeholder="Prepend %u to include urls..." />
-    <script src="tabs.js"></script>
-    <ul class="list-group" id="tab_list">
+    <ul id="tab_list">
         
     </ul>
+    <script src="tabs.js"></script>
 </body>
 </html>
